rearrange scss folder structure to use partials

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,2 @@
-body {
-  background-image: url('../assets/background.jpg');
-  background-size: cover;
-  height: 100vh;
-}
+@use 'base';
+@use 'components';
