--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,4 +1,7 @@
 :root {
   --bg-color: #333;
   --text-color: #fafafa;
+  --component-bg: rgba(0, 0, 0, 0.6);
+
+  --font-sans: 'Roboto Condensed', sans-serif;
 }
