--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,10 +1,12 @@
 body {
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   height: 100vh;
 
   color: var(--text-color);
   background-color: var(--bg-color);
-  background-image: url('../assets/background.jpg');
+  background-image: url('../assets/background.webp');
   background-size: cover;
   background-blend-mode: overlay;
 
