change nav links to buttons

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -22,5 +22,9 @@ a {
 }
 
 button {
+  font-family: inherit;
   display: block;
+  background-color: transparent;
+  color: inherit;
+  border: none;
 }
