--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,14 +2,14 @@
   padding: 1.5rem;
   background-color: var(--component-bg);
 
-  &__links {
+  &__btns {
     font-size: 1.125rem;
     display: flex;
     width: fit-content;
     margin-left: auto;
   }
 
-  &__link {
+  &__btn {
     font-size: 1.125rem;
     text-decoration: none;
     padding: .75rem;
