add about section and styles

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 :root {
   --bg-color: #333;
-  --text-color: #fafafa;
+  --text-color: #ccc;
   --component-bg: rgba(0, 0, 0, 0.6);
 
   --font-sans: 'Roboto Condensed', sans-serif;
