add home section and styles

--- a/src/about-page.handlebars
+++ b/src/about-page.handlebars
@@ -3,7 +3,7 @@
     <h2 class="section__title">ABOUT</h2>
 
     <div class="section__body">
-      <p>A diner-style bar and restaurant with a passion for eggs, Au Cheval elevates
+      <p>A diner-style bar and restaurant with a passion for eggs, Redoris elevates
        traditional diner fare. Guests can indulge in dishes ranging from chopped 
        chicken liver and roasted bone marrow, to traditional sandwiches, egg-focused 
       entrees, and the signature cheeseburger. The bar program showcases strong, classic 
