--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,6 +7,8 @@ body {
   color: var(--text-color);
   background-color: var(--bg-color);
   background-image: url('../assets/background.webp');
+  background-attachment: fixed;
+  background-position: center;
   background-size: cover;
   background-blend-mode: overlay;
 
