--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,6 +2,7 @@
   --bg-color: #333;
   --text-color: #ccc;
   --component-bg: rgba(0, 0, 0, 0.6);
+  --active: #fff;
 
   --font-sans: 'Roboto Condensed', sans-serif;
   --font-display: Sacramento, serif;
